<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="new_task">New Task</string>
    <string name="name">Name</string>
    <string name="oops">Oops</string>
    <string name="project">Project</string>
    <string name="priority">Priority</string>
    <string name="repeat">Repeat</string>
    <string name="no">No</string>
    <string name="every_day">Every day</string>
    <string name="once">Once</string>
    <string name="on_weekdays">On weekdays</string>
    <string name="on_weekends">On weekends</string>
    <string name="select_days">Select days</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="ok">Ok</string>
    <string name="add_new_task">Add new task</string>
    <string name="title_today">Today</string>
    <string name="today">Today</string>
    <string name="task_manager_example">Task Manager</string>
    <string name="_07_jan_23_project_example">07 Jan 23 / Project</string>
    <string name="priority_sheet_name">Priority</string>
    <string name="priority_red">Red</string>
    <string name="priority_green">Green</string>
    <string name="without_priority">Without priority</string>
    <string name="no_tasks">You have no tasks today</string>
    <string name="new_task_is_project">No project</string>
    <string name="new_task_is_repeat">No</string>
    <string name="make_Today">Make Today</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="date">Date</string>
    <string name="selected_date">07 Jan 23</string>
</resources>