<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:theme="@style/Theme.Todo">

    <ImageView
        android:id="@+id/bottom_sheet_repeat_drag_handle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        app:srcCompat="@drawable/drag_handle"/>

    <TextView
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/repeat"
        android:textColor="@color/black"/>

    <com.google.android.material.chip.ChipGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="33dp"
        app:chipSpacingHorizontal="12dp"
        app:chipSpacingVertical="13dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipNo"
            style="@style/Chips"

            android:text="@string/no"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipEveryDay"
            style="@style/Chips"
            android:text="@string/every_day"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnce"
            style="@style/Chips"
            android:text="@string/once"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnWeekdays"
            style="@style/Chips"
            android:text="@string/on_weekdays"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOnWeekends"
            style="@style/Chips"
            android:text="@string/on_weekends"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/selectDays"
            style="@style/Chips"
            android:layout_marginTop="0dp"
            android:text="@string/select_days"
            app:closeIcon="@drawable/icon_changing"
            app:closeIconEndPadding="20dp"
            app:closeIconSize="6dp"
            app:closeIconTint="@color/checked_text_color"
            app:closeIconVisible="true"
            app:textEndPadding="5dp"/>

    </com.google.android.material.chip.ChipGroup>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:visibility="invisible"
        tools:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="33dp"
        android:layout_marginBottom="42dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/monday"
            style="@style/CheckBox"
            android:text="@string/mon"
            app:layout_constraintEnd_toStartOf="@+id/tuesday"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:clickable="true"
            android:id="@+id/tuesday"
            style="@style/CheckBox"
            android:text="@string/tue"
            app:layout_constraintEnd_toStartOf="@+id/wednesday"
            app:layout_constraintStart_toEndOf="@id/monday"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/wednesday"
            style="@style/CheckBox"
            android:text="@string/wed"
            app:layout_constraintEnd_toStartOf="@+id/thursday"
            app:layout_constraintStart_toEndOf="@+id/tuesday"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/thursday"
            style="@style/CheckBox"
            android:text="@string/thu"
            app:layout_constraintEnd_toStartOf="@+id/friday"
            app:layout_constraintStart_toEndOf="@+id/wednesday"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/friday"
            style="@style/CheckBox"
            android:text="@string/fri"
            app:layout_constraintEnd_toStartOf="@+id/saturday"
            app:layout_constraintStart_toEndOf="@+id/thursday"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/saturday"
            style="@style/CheckBox"
            android:text="@string/sat"
            app:layout_constraintEnd_toStartOf="@+id/sunday"
            app:layout_constraintStart_toEndOf="@+id/friday"/>

        <androidx.appcompat.widget.AppCompatCheckedTextView
            android:id="@+id/sunday"
            style="@style/CheckBox"
            android:text="@string/sun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/saturday"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bottom_sheet_repeat_ok_button"
        android:layout_marginStart="258dp"
        style="@style/Okbtn"/>

</androidx.appcompat.widget.LinearLayoutCompat>