<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:theme="@style/Theme.Todo">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="@dimen/top_margin_toolbar">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            app:srcCompat="@drawable/back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/title"
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/new_task"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <EditText
            android:id="@+id/inputName"
            style="@style/Body2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:background="@drawable/rounded_input_background"
            android:hint="@string/oops"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@drawable/rounded_input_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/project"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName" />

        <TextView
            android:id="@+id/selectedProject"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputName"
            tools:text="No project" />

        <TextView
            android:id="@+id/priority"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectedPriority"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project"
            app:rippleColor="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            app:backgroundTint="@color/light_grey"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/repeat"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority" />

        <TextView
            android:id="@+id/selectedRepeat"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority"
            tools:text="No" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addTask"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="28dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/add_new_task"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat"
            app:rippleColor="@color/ripple_black"
            tools:ignore="TouchTargetSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>