<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:theme="@style/Theme.Todo">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/top_margin_toolbar"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@color/transparent"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            app:srcCompat="@drawable/back"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/title"
            style="@style/Headline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Task Manager"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <TextView
            android:id="@+id/selectedDate"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/selected_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />


        <TextView
            android:id="@+id/project"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/project"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <TextView
            android:id="@+id/selectedProject"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date"
            tools:text="Main" />

        <TextView
            android:id="@+id/priority"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/priority"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/selectedPriority"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="24dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:stateListAnimator="@null"
            app:cornerRadius="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/project"
            app:rippleColor="@null"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp"
            tools:backgroundTint="@color/light_grey"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/repeat"
            style="@style/Headline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:text="@string/repeat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority" />

        <TextView
            android:id="@+id/selectedRepeat"
            style="@style/Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priority"
            tools:text="No" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/makeToday"
            style="@style/Body1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="143dp"
            android:layout_marginBottom="143dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/make_Today"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repeat"
            app:layout_constraintVertical_bias="0.26"
            app:rippleColor="@color/ripple_black"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/delete"
            app:layout_constraintTop_toBottomOf="@id/makeToday"
            app:layout_constraintVertical_bias="0.036"
            app:rippleColor="@color/ripple_black"
            app:strokeColor="@color/ripple_black"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:letterSpacing="0"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/red"
            app:backgroundTint="@color/white"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit"
            app:layout_constraintVertical_bias="0.035"
            app:rippleColor="@color/red"
            app:strokeColor="@color/red"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>


