<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutCompat"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="true"
    android:paddingBottom="37dp"
    tools:theme="@style/Theme.Todo">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/drag_handle"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/priority_text"
        style="@style/Headline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="44dp"
        android:text="@string/priority_sheet_name"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priority_green"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/priority_green"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGreenPriority"
        style="@style/ButtonPriority"
        app:backgroundTint="@color/green"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_text"
        app:rippleColor="@null"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/priority_red"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/priority_red"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRedPriority"
        style="@style/ButtonPriority"
        app:backgroundTint="@color/red"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_green"
        app:rippleColor="@null"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/priority_without_priority"
        style="@style/TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="24dp"
        android:text="@string/without_priority"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_red" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonWithoutPriority"
        style="@style/ButtonPriority"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priority_red"
        app:rippleColor="@null"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp"
        tools:backgroundTint="@color/light_grey"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>